<resources>
    <string name="app_name">MiaoMessenger</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="welcome">Welcome</string>
    <string name="password">Password</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="reset_your_password">Reset Your Password</string>
    <string name="what_would_you_like_your_new_password_to_be">What would you like your new password to be?</string>
    <string name="create">Create</string>
    <string name="chats">Chats</string>
    <string name="update">Update</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="enter_your_email_address_and_we_will_send_you_a_link_to_reset_your_password">Enter your e-mail address and we´ll send you a link to reset your password</string>
    <string name="login">Login</string>
    <string name="new_password">New Password</string>
    <string name="create_group">Create Group</string>
    <string name="search_for_users">Search for users</string>
    <string name="check_your_mail">Check your mail!</string>
    <string name="instructions"></string>
    <string name="for_any_questions"></string>
    <string name="email">Email</string>
    <string name="have_you_forgott_password">Have you forgot your password?</string>
    <string name="username">Username</string>
    <string name="register">Register</string>
    <string name="new_password_to_be">What would you like your new password to be?</string>
</resources>
