<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".RegisterActivity">



    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.ChattApp.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/Theme.ChattApp.PopupOverlay" >


        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="561dp"
        android:layout_centerInParent="true"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="16dp">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="219dp"
            android:layout_height="185dp"
            app:srcCompat="@drawable/reset_password" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/reset_your_password"
            android:textColor="#FFFFFF"
            android:textSize="30dp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:gravity="center"
            android:text="@string/new_password_to_be"
            android:textColor="#FFFFFF"
            android:textSize="18dp" />

        <EditText
            android:id="@+id/new_password1"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:background="@drawable/roundstyle"
            android:backgroundTint="@android:color/white"
            android:gravity="center"
            android:hint="@string/new_password"
            android:inputType="text"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/black">

        </EditText>

        <EditText
            android:id="@+id/new_password2"
            android:layout_width="250dp"
            android:layout_height="51dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/roundstyle"
            android:backgroundTint="@android:color/white"
            android:gravity="center"
            android:hint="@string/new_password"
            android:inputType="text"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/black">

        </EditText>

        <Button
            android:id="@+id/register_btn"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/roundstyle"
            android:bottomLeftRadius="10dp"
            android:bottomRightRadius="10dp"
            android:text="@string/create"
            android:textColor="#000000"
            android:topLeftRadius="10dp"
            android:topRightRadius="10dp">

        </Button>


    </LinearLayout>

</RelativeLayout>